--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,10 @@
 # See https://www.dartlang.org/guides/libraries/private-files
+.idea
 
 # Files and directories created by pub
 .dart_tool/
 .packages
 build/
-# If you're building an application, you may want to check-in your pubspec.lock
-pubspec.lock
 
 # Directory created by dartdoc
 # If you don't generate documentation locally you can remove this line.
