gitignore flutter generated files.

--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,11 @@
 .packages
 build/
 
+# Flutter generated files
+**.gr.dart
+**.freezed.dart
+**.g.dart
+
 # Directory created by dartdoc
 # If you don't generate documentation locally you can remove this line.
 doc/api/
