--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,13 +31,13 @@ dependencies:
   auto_route: ^7.8.4
   awesome_dio_interceptor: ^1.0.0
   oktoast: ^3.3.2+1
-  freezed: ^2.4.5
   dartz: ^0.10.1
   
   #  injectable: ^2.3.2
 
   flutter:
     sdk: flutter
+  freezed_annotation: ^2.4.1
 
 dev_dependencies:
   flutter_test:
@@ -53,6 +53,7 @@ dev_dependencies:
   #  Others
   auto_route_generator: ^7.3.2
   lint: ^2.1.2
+  freezed: ^2.4.5
 
 flutter:
   uses-material-design: true
