--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -6,7 +6,13 @@ version: 0.1.0
 environment:
   sdk: '>=3.1.4 <4.0.0'
 
+# dependencies:
+  # Gemini AI
+  # gemini_ai: ^0.1.0
+
 dependencies:
+  googleai_dart: ^0.0.1-dev.1
+
   device_info_plus: ^9.1.0
   responsive_sizer: ^3.2.0
 
