--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -59,6 +59,7 @@ dev_dependencies:
   auto_route_generator: ^7.3.2
   lint: ^2.1.2
   freezed: ^2.4.5
+  test: ^1.24.9
 
 flutter:
   uses-material-design: true
